# speechee

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  LICENSE.md  NOTICE  README.md  TODO.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yaml
cmake/: ProjectConfigs.cmake  ProjectInstall.cmake  ProjectOptions.cmake  ProjectPackaging.cmake
cmake/generators/: deb.cmake
cmake/modules/: AddBoost.cmake  AddCxxOpts.cmake  AddGLib.cmake  AddGLibmm.cmake  AddGoogleTts.cmake  AddGstLite.cmake  AddJarvis.cmake  AddJarvisto.cmake  AddLibConfig.cmake  AddMosquitto.cmake  AddSdbusCpp.cmake  AddSigCpp.cmake  AddSpdLog.cmake  AddVoxer.cmake  (+4 more)
config/: CMakeLists.txt
config/dbus/: CMakeLists.txt  DbusConfig.hpp  org.denoming.jarvis.speaker.conf  org.denoming.jarvis.speaker.xml  org.denoming.speechee.conf
config/package/: CMakeLists.txt  SpeecheeConfig.cmake.in
config/systemd/: CMakeLists.txt  speechee.service.in
doc/: api.md  audio.md  intro.md  setup.md
scripts/: dbus-env  entrypoint.sh  import-dev-image.sh  install-amd64.sh  install-arm64.sh  run-build-env.sh  run-qemu.sh  run-test-env.sh  run.sh  synthesizeSsml.sh  synthesizeText.sh
src/: CMakeLists.txt  ServiceApplication.cpp  ServiceApplication.hpp  SpeakerApplication.cpp  SpeakerApplication.hpp  SpeakerService.cpp  SpeakerService.hpp
src/client/: CMakeLists.txt
src/client/doc/: client.md
src/client/include/client/: SpeakerClientImpl.hpp
src/client/include/speechee/: DbusSpeakerClient.hpp  HttpSpeakerClient.hpp  ISpeakerClient.hpp
src/client/src/: DbusSpeakerClient.cpp  DbusSpeakerProxy.cpp  HttpSpeakerClient.cpp  SpeakerClient.cpp  SpeakerClientImpl.cpp  SpeakerProxy.cpp
src/client/src/client/: DbusSpeakerProxy.hpp  SpeakerClientImpl.hpp  SpeakerProxy.hpp
src/common/: LoggerInitializer.cpp  LoggerInitializer.hpp
src/service/: CMakeLists.txt
src/service/include/service/: SpeakerService.hpp
src/service/include/speechee/: AudioBufferList.hpp  Constants.hpp  DbusSpeakerService.hpp  Formatters.hpp  GstInitializer.hpp  HttpSpeakerService.hpp  IPlayer.hpp  IPlayerFactory.hpp  IPlayerLoop.hpp  ISpeaker.hpp  ISpeakerService.hpp  ISpeechSynthesizePool.hpp  Player.hpp  PlayerFactory.hpp  PlayerLoop.hpp  ServiceLogger.hpp  Speaker.hpp  SpeakerAdapter.hpp  SpeakerSubsystem.hpp  SpeechSynthesizePool.hpp  SpeechSynthesizeTask.hpp  Types.hpp
src/service/src/: AudioBufferList.cpp  DbusSpeakerService.cpp  GstInitializer.cpp  HttpSpeakerService.cpp  Player.cpp  PlayerFactory.cpp  PlayerLoop.cpp  ServiceLogger.cpp  Speaker.cpp  SpeakerAdapter.cpp  SpeakerService.cpp  SpeakerSubsystem.cpp  SpeechSynthesizePool.cpp  SpeechSynthesizeTask.cpp
src/speaker/: CMakeLists.txt
src/speaker/doc/: speech.md
src/speaker/include/speaker/: AvailabilityObserver.hpp  AvailabilityPublisher.hpp  AvailabilitySubject.hpp  ConfigLoader.hpp  ConfigReader.hpp  DbusSpeakerService.hpp  Formatters.hpp  GeneralConfig.hpp  GstInitializer.hpp  HttpSpeakerService.hpp  IAvailabilitySubject.hpp  IPlayer.hpp  IPlayerFactory.hpp  IPlayerLoop.hpp  ISpeaker.hpp  ISpeechSynthesizePool.hpp  MqttPublisher.hpp  Player.hpp  PlayerFactory.hpp  PlayerLoop.hpp  Speaker.hpp  SpeakerAdapter.hpp  SpeakerService.hpp  SpeakerSubsystem.hpp  SpeechSynthesizePool.hpp  SpeechSynthesizeTask.hpp  TextToSpeechClient.hpp  Types.hpp
src/speaker/src/: AudioBufferList.cpp  AvailabilityObserver.cpp  AvailabilityPublisher.cpp  AvailabilitySubject.cpp  ConfigLoader.cpp  ConfigReader.cpp  DbusSpeakerService.cpp  GeneralConfig.cpp  GstInitializer.cpp  HttpSpeakerService.cpp  MqttPublisher.cpp  Player.cpp  PlayerFactory.cpp  PlayerLoop.cpp  Speaker.cpp  SpeakerAdapter.cpp  SpeakerService.cpp  SpeakerSubsystem.cpp  SpeechSynthesizePool.cpp  SpeechSynthesizeTask.cpp  TextToSpeechClient.cpp  Types.cpp
src/speaker/src/speaker/: AudioBufferList.hpp  PlayerLoop.hpp
src/speech/: CMakeLists.txt
src/speech/include/speech/: Formatters.hpp  IPlayer.hpp  ISpeaker.hpp  ISpeechSynthesizePool.hpp  ITextToSpeechClient.hpp  Logger.hpp  Player.hpp  Speaker.hpp  SpeechSubsystem.hpp  SpeechSynthesizePool.hpp  SpeechSynthesizeTask.hpp  SpeechSynthesizer.hpp  TextToSpeechClient.hpp
src/speech/src/: AudioBufferList.cpp  LoggerInitializer.cpp  Player.cpp  PlayerLoop.cpp  Speaker.cpp  SpeakerService.cpp  SpeechSubsystem.cpp  SpeechSynthesizePool.cpp  SpeechSynthesizeTask.cpp  SpeechSynthesizer.cpp  TextToSpeechClient.cpp  Types.cpp
src/speech/src/speech/: AudioBufferList.hpp
test/: CMakeLists.txt
test/common/: CMakeLists.txt
test/common/include/speechee/: MockPlayer.hpp  MockPlayerFactory.hpp  MockSpeechSynthesizePool.hpp  MockTextToSpeechClient.hpp
test/common/include/test/: MockPlayer.hpp  MockPlayerFactory.hpp  MockSpeechSynthesizePool.hpp  MockTextToSpeechClient.hpp
test/common/src/: MockPlayer.cpp  MockPlayerFactory.cpp  MockSpeechSynthesizePool.cpp  MockTextToSpeechClient.cpp  TestMain.cpp  Waiter.cpp
test/unit/: CMakeLists.txt
test/unit/src/: AvailabilityObserverTest.cpp  GeneralCofigTest.cpp  PlayerTest.cpp  SpeakerTest.cpp  SpeechSynthesizePoolTest.cpp
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt
tests/common/include/tests/: MockPlayer.hpp  MockSpeechSynthesizePool.hpp  MockTextToSpeechClient.hpp  TestWaiter.hpp  Waiter.hpp
tests/common/src/: MockPlayer.cpp  MockSpeechSynthesizePool.cpp  MockTextToSpeechClient.cpp  TestWaiter.cpp  Waiter.cpp
tests/unit/: CMakeLists.txt
tests/unit/src/: PlayerTest.cpp  SpeakerTest.cpp  SpeechSynthesizePoolTest.cpp  SpeechSynthesizerTest.cpp
toolchain/: aarch64-jarsdk-linux.cmake  x86_64-jarsdk-linux.cmake
tools/: CMakeLists.txt
tools/cli/: CMakeLists.txt
tools/cli/src/: main.cpp
tools/test/: CMakeLists.txt
tools/test/include/test/: Waiter.hpp
tools/test/src/: TestMain.cpp
tools/tts/: CMakeLists.txt
tools/tts/include/tts/: ITextToSpeechClient.hpp  OfflineTextToSpeechEngine.hpp  OnlineTextToSpeechClient.hpp  TextToSpeechClient.hpp  Types.h
tools/tts/src/: OfflineTextToSpeechEngine.cpp  OnlineTextToSpeechClient.cpp  TextToSpeechClient.cpp
(+27 files in other folders)
