cmake_minimum_required(VERSION 3.22)

project(jarvis-speaker
    VERSION 0.1.0
    DESCRIPTION "Jarvis Speaker Project"
)

include(cmake/ProjectOptions.cmake)
include(cmake/ProjectConfigs.cmake)
include(cmake/ProjectInstall.cmake)

add_subdirectory(config)
add_subdirectory(src)
if(JARVIS_ENABLE_TESTS)
    add_subdirectory(test)
endif()
